feat: get old game (#63) (#99)
* infra: tf changes (#63)

* api: api changes (#63)

* feat: get archived game (#63)

* chore: rename test

* fix: ArchiveGame.archiveGame takes winningUserName as well as Game entity

* impement GameOverService isGameOver function

* GetArchivedGameHandlerTests use the new ArchivedGame.archiveGame function.

* remove the winner attribute from ArchivedGame

---------
