# src/main/java/org/example/models/responses/rest/ArchiveGameResponse.java
@@ -1,0 +1,23 @@
+package org.example.models.responses.rest;
+
+import java.util.Date;
+import java.util.List;
+import lombok.AllArgsConstructor;
+import lombok.Getter;
+import lombok.NoArgsConstructor;
+import org.example.entities.move.Move;
+import org.example.entities.player.ArchivedPlayer;
+import org.example.enums.ResultReason;
+import org.example.enums.TimeControl;
+
+@Getter
+@NoArgsConstructor
+@AllArgsConstructor
+public class ArchiveGameResponse extends ResponseBody {
+  private TimeControl timeControl;
+  private Date created;
+  private List<Move> moveList;
+  private List<ArchivedPlayer> players;
+  private Integer rating;
+  private ResultReason resultReason;
+}
