# src/openapi/openapi.yaml
@@ -527,6 +527,99 @@ paths:
               method.response.header.Access-Control-Allow-Origin: '''*'''
               responseTemplates:
                 application/json: {}
+  /archivedGame/{gameId}:
+    get:
+      summary: Game State
+      description: Get Game State
+      parameters:
+      - name: Authorization
+        in: header
+        description: session token
+        required: true
+        schema:
+          type: string
+      - name: userId
+        in: header
+        required: true
+        schema:
+          type: string
+      - name: gameId
+        in: path
+        description: Archived Game id
+        required: true
+        schema:
+          type: string
+      responses:
+        "200":
+          description: Game State Successfully found
+          headers:
+            Access-Control-Allow-Origin:
+              schema:
+                type: string
+            Access-Control-Allow-Methods:
+              schema:
+                type: string
+            Access-Control-Allow-Headers:
+              schema:
+                type: string
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ArchivedGameResponse'
+        "400":
+          description: Bad Request
+          headers:
+            Access-Control-Allow-Origin:
+              schema:
+                type: string
+            Access-Control-Allow-Methods:
+              schema:
+                type: string
+            Access-Control-Allow-Headers:
+              schema:
+                type: string
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/GeneralResponseModel'
+      security:
+      - bearerAuth: []
+      x-amazon-apigateway-integration:
+        type: aws_proxy
+        httpMethod: POST
+        uri: "arn:${AWS::Partition}:apigateway:${AWS::Region}:lambda:path/2015-03-31/functions/arn:${AWS::Partition}:lambda:${AWS::Region}:${AWS::AccountId}:function:archivedGame/invocations"
+    options:
+      tags:
+      - CORS
+      summary: CORS support
+      description: Enable CORS by returning correct headers
+      responses:
+        "200":
+          description: Default response for CORS method
+          headers:
+            Access-Control-Allow-Origin:
+              schema:
+                type: string
+            Access-Control-Allow-Methods:
+              schema:
+                type: string
+            Access-Control-Allow-Headers:
+              schema:
+                type: string
+          content: {}
+      x-amazon-apigateway-integration:
+        type: mock
+        requestTemplates:
+          application/json: "{\"statusCode\": 200}"
+        responses:
+          default:
+            statusCode: "200"
+            responseParameters:
+              method.response.header.Access-Control-Allow-Headers: '''*'''
+              method.response.header.Access-Control-Allow-Methods: "'POST,OPTIONS'"
+              method.response.header.Access-Control-Allow-Origin: '''*'''
+              responseTemplates:
+                application/json: {}
 components:
   schemas:
     LoginRequestBody:
@@ -631,6 +724,34 @@ components:
         rating:
           type: integer
           description: Player's rating in the game.
+    ArchivedGameResponse:
+      type: object
+      properties:
+        resultReason:
+          $ref: '#/components/schemas/ResultReason'
+        winner:
+          type: string
+          description: The player who won the game.
+          example: player1
+        timeControl:
+          $ref: '#/components/schemas/TimeControl'
+        created:
+          type: string
+          description: Date when the game was created.
+          format: date-time
+          example: 2023-08-15T13:15:30Z
+        moveList:
+          type: array
+          items:
+            $ref: '#/components/schemas/Move'
+        players:
+          type: array
+          items:
+            $ref: '#/components/schemas/ArchivedPlayer'
+        rating:
+          type: integer
+          description: Rating of the game.
+          example: 1000
     User:
       type: object
       properties:
@@ -643,6 +764,60 @@ components:
         username:
           type: string
           example: foo-username
+    ResultReason:
+      type: string
+      description: The reason for the result of the game.
+      example: CHECKMATE
+      enum:
+      - ABORTED
+      - FORFEIT
+      - TIMEOUT
+      - CHECKMATE
+      - REPETITION
+      - INSUFFICIENT_MATERIAL
+    TimeControl:
+      type: string
+      description: Enumeration representing different time controls for a game.
+      enum:
+      - BLITZ_5
+      - BLITZ_10
+      - BULLET_3
+      - BULLET_1
+    Move:
+      type: object
+      properties:
+        notation:
+          type: string
+          description: The move in standard algebraic notation.
+          example: e4
+        timestamp:
+          type: string
+          description: The timestamp when the move was made.
+          format: date-time
+          example: 2024-10-07T10:20:30Z
+    ArchivedPlayer:
+      type: object
+      properties:
+        username:
+          type: string
+          description: The username of the player.
+          example: test-username
+        isWhite:
+          type: boolean
+          description: Indicates if the player is playing as white.
+          example: true
+        remainingTime:
+          type: integer
+          description: The remaining time for the player in seconds.
+          example: 300
+        connectionId:
+          type: string
+          description: The connection ID for the player's WebSocket.
+          example: fake-connection-id
+        playerId:
+          type: string
+          description: Unique identifier for the player.
+          example: test-Id
   responses:
     "400":
       description: Bad Request
